<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".PreLoginActivity">

<TextView
    android:id="@+id/preLoginTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="120dp"
    android:fontFamily="@font/noto_sans_kr_light"
    android:text="@string/pre_login_title"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="@+id/btnSignup"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="168dp"
    android:text="@string/idview"
    android:textSize="46sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/btnSignup"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="0dp"
    android:layout_height="177dp"
    android:layout_marginStart="75dp"
    android:layout_marginTop="256dp"
    android:layout_marginEnd="75dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/lock_key_3d_image" />

<Button
    android:id="@+id/btnSignup"
    android:layout_width="320dp"
    android:layout_height="48dp"
    android:layout_marginTop="505dp"
    android:text="@string/start_with_email"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="70dp"
    android:layout_marginTop="565dp"
    android:gravity="center_horizontal"
    android:text="@string/start_with_email"
    android:textSize="14sp"
    app:layout_constraintStart_toStartOf="@+id/btnSignup"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/connect_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="565dp"
    android:layout_marginEnd="70dp"
    android:text="@string/connect_to_login"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="@+id/btnSignup"
    app:layout_constraintStart_toEndOf="@+id/textView3"
    app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>