<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".Service1Fragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="233dp"
            android:text="@string/home"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user" />
    </LinearLayout>

    <TextView
        android:id="@+id/service1Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hello_idview"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/countServiceLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_light"
        android:text="@string/home_detail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/countServiceLayout"
        app:layout_constraintTop_toBottomOf="@+id/service1Nickname" />

    <LinearLayout
        android:id="@+id/countServiceLayout"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/white_round_box"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service1Nickname">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="21dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/howManyService"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/not_connect_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="95dp"
            android:paddingStart="80dp"
            android:paddingEnd="21dp"
            android:text="@string/not_connect_yet"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary_600"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoPolicyCi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="130dp"
            android:paddingEnd="21dp"
            android:background="@drawable/white_round_button"
            android:text="@string/go_policy_ci"
            android:textSize="16sp"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ciNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="29dp"
        android:visibility="gone"
        android:text="30"
        android:textSize="74sp"
        android:textStyle="bold"
        android:textColor="@color/primary_600"
        app:layout_constraintTop_toTopOf="@id/countServiceLayout"
        app:layout_constraintEnd_toEndOf="@id/countServiceLayout"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="30dp"
        android:visibility="gone"
        android:text="개"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/countServiceLayout"
        app:layout_constraintStart_toEndOf="@id/ciNumber"/>

</androidx.constraintlayout.widget.ConstraintLayout>